Attempt to fix the invisible Ohloh widget by hacking its <iframe/>

--- a/style/wgo.css
+++ b/style/wgo.css
@@ -697,17 +697,3 @@ iframe.FlattrButton
 	margin-left: 3px;
 	padding-left: 8px;
 }
-
-/* fix the ohloh widget formatting */
-div.gadget {
-	color: black;
-	background-color: white;
-}
-
-div.gadget h3 {
-	clear: none;
-}
-
-div.gadget div {
-    clear: none ! important;
-}
